soroban-sdk/tests/trybuild/contractimport_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: bd54d7acd68edca80653a4cebdf8204fdb678de773911eba73fdd96962efd9b5
 --> tests/trybuild/contractimport_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^
